# sbt

./: .gitignore  README.md  pyproject.toml
docs/: plotting_guide.md  获取历史行情数据.ipynb  获取板块列表.ipynb
examples/: run_simple.py
src/sbt/: __init__.py  cli.py
src/sbt/backtest/: __init__.py  engine.py  strategy.py
src/sbt/commands/: backtest.py  data.py
src/sbt/plotting/: __init__.py  calculator.py  indicators.py  plotter.py  themes.py
strategies/: SMACross.py
